Fix scrollbar issues on content and left nav

--- a/style/navmenu.css
+++ b/style/navmenu.css
@@ -6,15 +6,18 @@ html, body {
   margin-bottom: 0px;
 }
 
-#leftnav {
-  padding-top: 61px;
+#docpage-outer {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding-top: 68px;
 }
 
 #docpage {
-  padding-top: 61px;
   width: 100%;
   height: 100%;
-  scroll: auto;
+  overflow-y: scroll;
+  flex: 1;
 }
 
 #menu-header {
@@ -24,7 +27,9 @@ html, body {
 }
 
 .navmenu {
+  top: 68px;
   width: 220px;
+  overflow-x: hidden;
 }
 
 .navmenu-nav.dropdown-menu,
@@ -68,10 +73,6 @@ h4, .h4 {
   border: none;
 }
 
-.container {
-  max-width: 100%;
-}
-
 .dropdown-header {
   font-size: 14px;
   font-weight: bold; 
@@ -86,7 +87,7 @@ h4, .h4 {
 }
 @media (min-width: 992px) {
   #docpage {
-    padding: 61px 0px 0px 235px;
+    padding-left: 235px;
   }
 }
 
